--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   material_color_gen: ^2.0.0
   conditional_builder_null_safety: ^0.0.6
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
